--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader-Board</title>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/43c90e3df3.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -45,6 +47,127 @@
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
                         <h3 class="player-name">top player-6</h3>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of my favourite UI/UX goodies</h3>
+                            <p class="blog-author">By <a href="">Damy Sapio</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of my favourite UI/UX goodies</h3>
+                            <p class="blog-author">By <a href="">Damy Sapio</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of my favourite UI/UX goodies</h3>
+                            <p class="blog-author">By <a href="">Damy Sapio</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of my favourite UI/UX goodies</h3>
+                            <p class="blog-author">By <a href="">Damy Sapio</a> </p>
+                        </div>
+                    </article>
+                </div>
+
+            </div>
+        </section>
+        <!---------- Latest Courses---------->
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React the complete guide title -2022</h3>
+                        <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01.30 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
+                        <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01.30 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The complete javascript course 2022 </h3>
+                        <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star field"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01.30 hr
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
